# QtAutoDiffieHellman

./: README.md
.github/workflows/: cmake-single-platform.yml
Client/: CMakeLists.txt  Dialog.cpp  Dialog.h  Dialog.ui
Server/: CMakeLists.txt  Server.cpp  Server.h  ServerManager.cpp  ServerManager.h  ServerManager.ui  main.cpp
